--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <img src="background.png" alt="freepik image">
     <p>O número de brasileiros contratados por empresas estrangeiras de tecnologia cresceu quase 500% em três anos. Os
         Estados Unidos concentram a maior parte dessas vagas, absorvendo 85% dos profissionais</p>
 
@@ -17,6 +16,7 @@
     </p>
 
     <p>fonte: Jovem pan 24/08/2025 05h44</p>
+    <img src="image.png" alt="">
 </body>
 
 </html>
