--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 
 <body>
-    <p>O número de brasileiros contratados por empresas estrangeiras de tecnologia cresceu quase 500% em três anos. Os
-        Estados Unidos concentram a maior parte dessas vagas, absorvendo 85% dos profissionais</p>
-
-    <p>Segundo dados da empresa JetBrains, o país tem cerca de 630 mil profissionais, ocupando a quinta posição mundial.
-    </p>
-
-    <p>fonte: Jovem pan 24/08/2025 05h44</p>
-    <img src="image.png" alt="">
+    <div class="card">
+        <div class="texto">
+            <p>
+                O número de brasileiros contratados por empresas estrangeiras de tecnologia cresceu quase 500% em três anos. Os Estados Unidos concentram a maior parte dessas vagas, absorvendo 85% dos profissionais
+            </p>
+            <p>
+                    Segundo dados da empresa JetBrains, o país tem cerca de 630 mil profissionais, ocupando a quinta posição mundial, ficando atrás apenas de China, Estados Unidos, Índia e Japão.
+            </p>
+        </div>
+        <div class="imagem">
+            <img src="imagemAlta.png" alt="Brasil é o 5º país com mais profissionais de TI no mundo">
+        </div>
+        <p>fonte: Jovem pan 24/08/2025 05h44</p>
+    </div>
 </body>
 
 </html>
