--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS\style.css">
 </head>
 
 <body>
     <div class="card">
+    
+        <h1 class="titulo">
+            Profissionais de TI Brasileiros em alta no exterior
+        </h1>
+
         <div class="texto">
             <p>
                 O número de brasileiros contratados por empresas estrangeiras de tecnologia cresceu quase 500% em três anos. Os Estados Unidos concentram a maior parte dessas vagas, absorvendo 85% dos profissionais
             </p>
             <p>
-                    Segundo dados da empresa JetBrains, o país tem cerca de 630 mil profissionais, ocupando a quinta posição mundial, ficando atrás apenas de China, Estados Unidos, Índia e Japão.
+                Segundo dados da empresa JetBrains, o país tem cerca de 630 mil profissionais, ocupando a quinta posição mundial, ficando atrás apenas de China, Estados Unidos, Índia e Japão.
             </p>
         </div>
-        <div class="imagem">
-            <img src="imagemAlta.png" alt="Brasil é o 5º país com mais profissionais de TI no mundo">
-        </div>
-        <p>fonte: Jovem pan 24/08/2025 05h44</p>
+            <img src="img/imagemAlta.png" alt="Freepik" class="imagem">             
+        <p>
+            fonte: Jovem pan 24/08/2025 05h44
+        </p>
     </div>
 </body>
 
