--- a/desenvolvimento para web/trabalho2/index.html
+++ b/desenvolvimento para web/trabalho2/index.html
@@ -38,13 +38,40 @@
             </ul>
         </nav>
     </section>
+
+    <section>
+        <h1>
+            Modo de Preparo:
+        </h1>
+        <nav>
+            <ol type="1">
+                <li>Preparando as espigas: </li>
+                <ul>
+                    <li>passo 1: Comece retirando as folhas e os cabelos do milho.</li>
+                    <li>passo 2: Corte as espigas ao meio para facilitar o cozimento e também para que caibam melhor na panela.</li>
+                </ul><br>
+                <li>Cozinhando o milho:</li>
+                <ul>
+                    <li>passo 1: Em uma panela grande, adicione as espigas de milho e cubra com água.</li>
+                    <li>passo 2: Adicione uma pitada de sal para temperar (você pode ajustar a quantidade de sal mais tarde).</li>
+                    <li>passo 3: Leve a panela ao fogo médio e deixe ferver. Quando começar a ferver, abaixe o fogo e cozinhe por cerca de 30 a 40 minutos, ou até que o milho fique bem macio. Para testar, basta espetar um grão de milho com um garfo ou faca — ele deve estar macio e soltar fácil dos grãos.</li>
+                </ul><br>
+                <li>Finalizando: </li>
+                <ul>
+                    <li>passo 1: Quando o milho estiver cozido, retire da panela com cuidado e coloque em um prato.</li>
+                    <li>passo 2: Se desejar, adicione um pedaço de manteiga sobre cada espiga ainda quente para dar mais sabor.</li>
+                    <li>passo 3: Você também pode salpicar um pouco de queijo parmesão ralado por cima para um toque extra de sabor.</li><br>
+                </ul>
+            </ol>
+        </nav>
+    </section>
     
     <footer>
         <h4>
             <a href="index.html">Voltar para o topo</a>
         </h4>
         <small>
-            &lt; &copy;  Exemplo tetris &gt;
+            &lt; &copy;  Receitas &gt;
         </small>
     </footer>
 </body>
