--- a/desenvolvimento para web/P2/ingredientes.html
+++ b/desenvolvimento para web/P2/ingredientes.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingredientes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Receita de milho verde cozido</h1>
+        <h1 class="Titulo">Receita de milho verde cozido</h1>
         <figure>
-            <img src="img/milho.png" alt="Espigas de milho verde cozidas em uma panela">
+            <img src="milho_bonito.png" alt="Espigas de milho verde cozidas em uma panela">
             <figcaption>receita simples e divertida de fazer</figcaption>
         </figure>
         <nav>
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="ingredientes.html">ingredientes</a></li>
+                <li><a href="index.html">home</a></li>        
                 <li><a href="modo_de_preparo.html">modo de preparo</a></li>
                 <li><a href="galeria.html">galeria de fotos</a></li>
             </ul>
         </nav>
     </header>
 
-    <section>
+    <section class="Ingredientes">
         <h1>
             Lista de Ingredientes:
         </h1>
