--- a/desenvolvimento para web/P2/index.html
+++ b/desenvolvimento para web/P2/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Receita de milho verde cozido</h1>
+        <h1 class="Titulo">Receita de milho verde cozido</h1>
         <figure>
-            <img src="img/milho.png" alt="Espigas de milho verde cozidas em uma panela">
+            <img src="milho_bonito.png" alt="Espigas de milho verde cozidas em uma panela">
             <figcaption>receita simples e divertida de fazer</figcaption>
         </figure>
         <nav>
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="Ingredientes">
         <h1>
             Lista de Ingredientes:
         </h1>
@@ -39,7 +39,7 @@
         </nav>
     </section>
 
-    <section>
+    <section class="preparo">
         <h1>
             Modo de Preparo:
         </h1>
@@ -66,7 +66,7 @@
         </nav>
     </section>
     
-    <footer>
+    <footer class="rodape">
         <h4>
             <a href="index.html">Voltar para o topo</a>
         </h4>
